[SELC-6388] feat: updated api getInstitutions by productId and userId